Modifications based on SonarLint